# gamedevkit

./: .cmake-format.json  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cd.yml  ci.yml
cmake/: Packages.cmake  ProjectUtils.cmake  TestUtils.cmake
src/: CMakeLists.txt
src/core/: AbstractGame.cpp  Application.cpp  CMakeLists.txt  KeyboardHelper.cpp  KeyboardInputSubscriber.cpp  Window.cpp  WindowBuilder.cpp  WindowPropertiesSubscriber.cpp
src/core/include/core/GDK/: AbstractGame.hpp  AbstractRenderer.hpp  Application.hpp  Keyboard.hpp  KeyboardInputSubscriber.hpp  Window.hpp  WindowBuilder.hpp  WindowProperties.hpp  WindowPropertiesSubscriber.hpp
src/core/include/details/: ApplicationDetails.hpp  KeyboardHelper.hpp
src/shaders/: CMakeLists.txt  GenericProgram.cpp  GenericShader.cpp  ShadersHelper.cpp
src/shaders/include/details/: ShadersHelper.hpp
src/shaders/include/shaders/GDK/: GenericProgram.hpp  GenericShader.hpp  GraphicsLibrary.hpp
src/utils/: CMakeLists.txt  Image.cpp  ImageLoader.cpp
src/utils/include/utils/GDK/: Image.hpp  ImageLoader.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  test_core_Application.cpp  test_core_Window.cpp  test_core_WindowBuilder.cpp  test_shaders_GenericProgram.cpp  test_shaders_GenericShader.cpp  test_utils_ImageLoader.cpp
tests/glewstub/: CMakeLists.txt  glew.cpp
tests/glewstub/include/GL/: glew.h
